<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home - Primary destination -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_selector"
        android:title="@string/home"
        android:enabled="true" />

    <!-- Appointments - Core healthcare feature -->
    <item
        android:id="@+id/nav_appointments"
        android:icon="@drawable/ic_doctor_selector"
        android:title="@string/appointments"
        android:enabled="true" />

    <!-- Medicines - Essential pharmacy feature -->
    <item
        android:id="@+id/nav_medicines"
        android:icon="@drawable/ic_medicine_selector"
        android:title="@string/medicines"
        android:enabled="true" />

    <!-- Quick Actions - Fast access -->
    <item
        android:id="@+id/nav_quick_actions"
        android:icon="@drawable/ic_quick_actions_selector"
        android:title="@string/quick_actions"
        android:enabled="true" />

    <!-- Profile - User account -->
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_selector"
        android:title="@string/profile"
        android:enabled="true" />

</menu>
