<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profile"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:textColor="@color/text_primary"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin_xlarge" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            android:layout_marginBottom="@dimen/margin_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_large">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary"
                    android:layout_marginBottom="@dimen/margin_medium" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_email"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary"
                    android:layout_marginBottom="@dimen/margin_medium" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_age"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary"
                    android:layout_marginBottom="@dimen/margin_medium" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_phone"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary"
                    android:layout_marginBottom="@dimen/margin_medium" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_address"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary"
                    android:layout_marginBottom="@dimen/margin_medium" />

                <TextView
                    android:id="@+id/tvBloodGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_blood_group"
                    android:textSize="@dimen/text_size_large"
                    android:textColor="@color/text_primary" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/update_button"
                android:textColor="@color/text_white"
                android:background="@drawable/button_primary"
                android:layout_marginEnd="@dimen/margin_small" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:text="@string/delete_button"
                android:textColor="@color/accent_blue"
                android:background="@drawable/button_secondary"
                android:layout_marginStart="@dimen/margin_small" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
