<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_background"
    android:padding="@dimen/padding_xlarge">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="@dimen/margin_large"
        android:src="@drawable/ic_medibook_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_size_display"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        android:layout_marginBottom="@dimen/margin_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/text_white"
        android:layout_marginBottom="@dimen/margin_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_website"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_white"
        android:textStyle="italic" />

</LinearLayout>
